<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings_text">Настройки</string>
    <string name="library_text">Медиатека</string>
    <string name="search_text">Поиск</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="sharing_text">https://practicum.yandex.ru/learn/android-developer-plus</string>
    <string name="email_support">"andrey.khartov@yandex.ru"</string>
    <string name="write_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="uri_link_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="tracks_not_found">Ничего не нашлось</string>
    <string name="no_internet_no_tracks">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="notifications_not_allowed">Уведомления можно включить в настройках</string>
    <string name="update_tracks">Обновить</string>
    <string name="you_looking_for_text">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country_text">Страна</string>
    <string name="genre_text">Жанр</string>
    <string name="year_text">Год</string>
    <string name="album_text">Альбом</string>
    <string name="track_length_text">Длительность</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="history_tracks_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists_text">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="text_add_to_playlist">Добавить в плейлист</string>
    <string name="text_new_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="word_track">трек</string>
    <string name="word_tracka">трека</string>
    <string name="word_trackov">треков</string>
    <string name="new_playlist_created">Плейлист %s создан</string>
    <string name="ask_finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_data_will_lost">Все несохраненные данные будут потеряны</string>
    <string name="do_you_want_remove_track">Хотите удалить трек?</string>
    <string name="remove_cover">Удалить плейлист</string>
    <string name="do_you_want_remove_cover">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="finish">Завершить</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_descrition">Описание</string>
    <string name="no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="share">Поделиться</string>

    <plurals name="track_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minute_count">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

</resources>