<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playlistEditorFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_horizontal"
        />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_button"
        style="@style/TitlePanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/text_new_playlist"
        />

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="@dimen/add_cover_rect"
        android:layout_height="@dimen/add_cover_rect"
        android:layout_marginVertical="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:srcCompat="@drawable/ic_312_add_cover"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_title_container"
        style="@style/CoverMakerTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:hint="@string/playlist_title"
        app:hintTextAppearance="@style/CoverMakerHintTextAppearance"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/cover_image"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:singleLine="true"
            android:textSize="@dimen/normal_text_size"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_container"
        style="@style/CoverMakerTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:hint="@string/playlist_descrition"
        app:hintTextAppearance="@style/CoverMakerHintTextAppearance"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlist_title_container"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:singleLine="true"
            android:textSize="@dimen/normal_text_size"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_playlist_button"
        style="@style/MainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:backgroundTint="@drawable/button_background"
        android:minHeight="44dp"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>