<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_horizontal"
        />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/big_player_margin"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:srcCompat="@drawable/track_placeholder"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/imageBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="cover"
        />

    <TextView
        android:id="@+id/track_title"
        style="@style/PlayerTrackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_player_margin"
        android:fontFamily="@font/ys_display_medium"
        android:text="track_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/cover"
        />

    <TextView
        android:id="@+id/track_artist"
        style="@style/PlayerArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_player_margin"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="track_artist"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/track_title"
        />

    <ImageButton
        android:id="@+id/button_add_to_list"
        android:layout_width="@dimen/normal_round_button"
        android:layout_height="@dimen/normal_round_button"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_button_51_add_to_list_unchecked"
        app:layout_constraintBottom_toTopOf="@id/textsBarrier"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/track_artist"
        />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="@dimen/big_round_button"
        android:layout_height="@dimen/big_round_button"
        android:background="@drawable/round_button_big"
        android:src="@drawable/ic_button_play_100"
        app:layout_constraintBottom_toTopOf="@id/textsBarrier"
        app:layout_constraintEnd_toStartOf="@+id/button_change_favourites"
        app:layout_constraintStart_toEndOf="@+id/button_add_to_list"
        app:layout_constraintTop_toBottomOf="@+id/track_artist"
        />

    <ImageButton
        android:id="@+id/button_change_favourites"
        android:layout_width="@dimen/normal_round_button"
        android:layout_height="@dimen/normal_round_button"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_button_51_favourite_unchecked"
        app:layout_constraintBottom_toTopOf="@id/textsBarrier"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/track_artist"
        />

    <TextView
        android:id="@+id/track_time_position"
        style="@style/PlayerArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="00:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_play"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="track_length_label"
        />

    <TextView
        android:id="@+id/track_length_label"
        style="@style/PlayerOtherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/track_length_text"
        app:layout_constraintBottom_toTopOf="@id/track_album_label"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        />

    <TextView
        android:id="@+id/track_length"
        style="@style/PlayerOtherValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/track_length_text"
        app:layout_constraintBottom_toTopOf="@id/track_album_label"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/track_length_label"
        />

    <TextView
        android:id="@+id/track_album_label"
        style="@style/PlayerOtherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/album_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/track_album"
        app:layout_constraintBottom_toTopOf="@id/track_year_label"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        />

    <TextView
        android:id="@+id/track_album"
        style="@style/PlayerOtherValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/album_text"
        app:layout_constraintBottom_toTopOf="@id/track_year_label"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/track_album_label"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/album_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="track_album_label,track_album"
        />

    <TextView
        android:id="@+id/track_year_label"
        style="@style/PlayerOtherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/year_text"
        app:layout_constraintBottom_toTopOf="@id/track_genre_label"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        />

    <TextView
        android:id="@+id/track_year"
        style="@style/PlayerOtherValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/year_text"
        app:layout_constraintBottom_toTopOf="@id/track_genre_label"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/track_year_label"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/year_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="track_year_label,track_year"
        />

    <TextView
        android:id="@+id/track_genre_label"
        style="@style/PlayerOtherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genre_text"
        app:layout_constraintBottom_toTopOf="@id/track_country_label"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        />

    <TextView
        android:id="@+id/track_genre"
        style="@style/PlayerOtherValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/genre_text"
        app:layout_constraintBottom_toTopOf="@id/track_country_label"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/track_genre_label"
        />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/genre_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="track_genre_label,track_genre"
        />

    <TextView
        android:id="@+id/track_country_label"
        style="@style/PlayerOtherTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/country_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        />

    <TextView
        android:id="@+id/track_country"
        style="@style/PlayerOtherValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/country_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/track_country_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>